--- a/public/css/frontend-css/home.css
+++ b/public/css/frontend-css/home.css
@@ -3,12 +3,8 @@
     padding: 0;
 }
 
-.main-section{
-    position: absolute;
-}
-
 .image-container{
-    height: 700px;
+    max-height: 700px;
     position: relative;
     text-align: center;
     overflow: hidden;
@@ -23,7 +19,7 @@
 
 .slogan span{
     font-weight: bold;
-    font-size: 48px;
+    font-size: 40px;
 }
 .slogan p{
     font-size: 24px;
@@ -39,7 +35,7 @@
     top: -60px;
     margin: 0px auto;
     padding: 40px 24px;
-    width: 832px;
+    max-width: 832px;
     height: 155px;
     background: #FFFFFF;
     box-shadow: 0px 1.2px 3.6px rgba(0, 0, 0, 0.1), 0px 6.4px 14.4px rgba(0, 0, 0, 0.13);
@@ -48,7 +44,7 @@
 
 .search-group input{
     padding: 10px;
-    width: 537px;
+    max-width: 537px;
     height: 38px;
 }
 
@@ -72,7 +68,7 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 24px;
-    width: 1400px;
+    max-width: 1400px;
     height: auto;
     background: #F3F4F4;
     border-radius: 4px;
@@ -80,15 +76,20 @@
 }
 
 .card{
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     cursor: pointer;
+    border: none !important; 
+}
+
+.card-img-top{
+    border-radius: 0px !important;
 }
 
 .popular-rooms-heading div{
     width: 200px;
     background-color: black;
     height: 2px;
-    margin-bottom: 10px;
+    margin-bottom: 40px;
 }
 
 .popular-rooms-heading h2{
@@ -103,15 +104,16 @@
 }
 
 .top-areas{
-    width: 1400px;
-    margin: 0px auto;
+    max-width: 1400px;
+    margin: 40px auto 0px auto;
     padding: 24px;
     height: auto;
 }
 
 .top-areas .area-card{
-    background-color: #CC2D4A;
+    background-color: #011627;
     border-radius: 0px;
+    color: #FFFFFF;
 }
 
 .card-title{
@@ -119,7 +121,7 @@
 }
 
 .discover-features{
-    width: 1400px;
+    max-width: 1400px;
     margin: 0px auto;
     padding: 24px;
     height: auto;
@@ -132,7 +134,7 @@
 }
 
 .image-holder{
-    width: 600px;
+    max-width: 600px;
     height: 600px;
     margin: 10px;
     overflow: hidden;
@@ -159,6 +161,42 @@
 }
 
 .image-holder img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.room-holder{
+    max-width: 1400px;
+    height: 600px;
+    margin: 40px auto;
+    overflow: hidden;
+    position: relative;
+    border-radius: 12px;  
+}
+
+.room-holder a{
+    position: absolute;
+    top: 8px;
+    right: 16px;
+    background-color: Transparent;
+    background-repeat: no-repeat;
+    border: 1px solid #9FA5A8;
+    color: black;
+    cursor:pointer;
+    overflow: hidden;
+    outline:none;
+}
+
+.room-holder a:hover{
+    background-color: #E5E7EB;
+    color: black;
+}
+
+.room-holder img{
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     object-position: center;
 }
@@ -173,7 +211,7 @@ footer p a{
 }
 
 .page-footer{
-    width: 1400px;
+    max-width: 1400px;
     height: auto;
     margin: 0px auto;
     padding: 24px;
@@ -181,6 +219,7 @@ footer p a{
 
 .page-footer h5{
     font-weight: bold;
+    margin-bottom: 20px;
 }
 
 .line{
@@ -191,7 +230,7 @@ footer p a{
 }
 
 .sub-footer{
-    width: 1400px;
+    max-width: 1400px;
     height: auto;
     margin: 0px auto;
     padding: 24px;
@@ -204,4 +243,140 @@ footer p a{
 .social-icons-holder a{
     text-decoration: none;
     color: black;
+}
+
+@media only screen and (max-width: 425px) {
+    .main-section{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .search-box{
+        max-width: 310px;
+        min-width: 268px;
+        width: 100%;
+        padding: 10px;
+        margin: 10px 0px;
+    }
+
+    .search-group input{
+        padding: 10px;
+        max-width: 150px;
+        height: 38px;
+    }
+    
+    .search-group button{
+        background: #035EA5;
+        border: 1px solid #9FA5A8;
+        max-width: 65px;
+        height: 38px;
+        box-sizing: border-box;
+        border-radius: 4px;
+        color: #F9F9F9;
+    }
+
+    .popular-rooms{
+        justify-content: center;
+        align-items: center;
+        padding: 5px;
+    }
+
+    .cards-wrapper{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .area-card{
+        margin-top: 20px;
+    }
+
+    .discover-features{
+        display: flex;
+        flex-direction: column;
+        padding: 5px;
+    }
+
+    .features-holder{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .image-holder{
+        max-width: 300px;
+        height: 300px;
+    }
+
+    .room-holder{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        max-width: 300px;
+        height: 300px;
+    }
+
+    .page-footer{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .sub-footer{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .slogan{
+        top: 30% !important;
+        left: 50% !important;
+    }
+
+    .slogan span{
+        font-weight: bold;
+        font-size: 16px !important;
+    }
+    
+    .slogan p{
+        font-size: 11px !important;
+    }
+
+    .popular-rooms-heading{
+        margin-top: 10px;
+    }
+
+    footer{
+        width: 100%;
+    }   
+}
+
+@media only screen and (max-width: 768px){
+    .slogan{
+        top: 30%;
+        left: 50%;
+    }
+
+    .slogan span{
+        font-weight: bold;
+        font-size: 40px;
+    }
+    
+    .slogan p{
+        font-size: 23px;
+    }
+
+    .top-areas{
+        flex-wrap: wrap;
+    }
+
+    .cards-wrapper{
+        flex-direction: column !important;
+        align-items: center;
+    }
+}
+
+@media only screen and (max-width: 1024px){
+    .top-areas .cards-wrapper{
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+    }
 }
