--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,63 +1,109 @@
 *{
     margin: 0px;
     padding: 0px;
-    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
 }
 
-.wrapper{
-    margin: 60px auto;
-    box-shadow: 5px 5px 10px #888888;
-    border-radius: 10px;
+.main-div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+}
+
+.login-card{
+    display: flex;
+    flex-direction: column;
+    min-width: 320px;
+    align-items: center;
 }
 
 .image-holder{
-    width: 60%;
+    width: 100%;
 }
 
-.login-img{
-    height: 700px;
-    width: 800px;
+.image-holder img{
     object-fit: cover;
-    overflow: hidden;
+    object-position: center;
 }
 
-.login-form{
-    padding-top: 20px;
+.form-group input{
+    max-width: 380px;
+    min-width: 240px;
+    width: 100%;
 }
 
-.form-holder{
-    margin-left: 20px;
-    padding: 10px;
+.divider:after,
+.divider:before {
+  content: "";
+  flex: 1;
+  height: 1px;
+  background: #eee;
 }
 
-.or-container {
-    align-items: center;
-    color: #ccc;
-    display: flex;
-    margin: 25px 0;
+.btn{
+    max-width: 380px;
+    min-width: 240px;
+    width: 100%;
+    font-size: 18px;
 }
 
-.line-separator {
-    background-color: #ccc;
-    flex-grow: 5;
-    height: 1px;
+.sign-in-btn{
+    background-color: #0C0B0B !important; 
+    color: #ffffff !important;
 }
 
-.or-label {
-    flex-grow: 1;
-    margin: 0 15px;
-    text-align: center;
-}
-
-.btn-social {
-    color: #545454;
+.social-btn{
     background-color: #ffffff;
-    box-shadow: 0 1px 2px 1px #ddd;
-    height: 50px;
-    width: 405px;
+    color: #0C0B0B;
 }
 
-.logo-img{
-    height: 25px;
-    width: 25px;
+.facebook{
+    border:2px solid #3b5998 !important;
+    color: #3b5998 !important;
+}
+
+.facebook:hover{
+    background-color: #3b5998 !important;
+    color: #ffffff !important;
+}
+
+.google{
+    border: 2px solid #0C0B0B !important;
+}
+
+.google:hover{
+    background-color: #0C0B0B !important;
+    color: #ffffff !important;
+}
+
+@media only screen and (min-width: 769px){
+    .login-card{
+        flex-direction: row;
+        max-width: 1022px;
+        min-width: 768px;
+        width: 100%;
+        box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px;
+    }
+
+    .form-holder{
+        padding: 25px;
+        width: 40%;
+    }
+
+    .image-holder{
+        height: 100%;
+    }
+
+    .image-holder img{
+        height: 100%;
+    }
+}
+
+@media only screen and (min-width: 1025px) {
+    .login-card{
+        max-width: 1400px;
+        min-width: 1024px;
+    }
 }
