--- a/public/css/register.css
+++ b/public/css/register.css
@@ -34,6 +34,22 @@
     width: 100%;
 }
 
+.form-holder{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-group{
+    margin-bottom: 10px;
+}
+
 .divider:after,
 .divider:before {
   content: "";
