--- a/public/css/login.css
+++ b/public/css/login.css
@@ -28,10 +28,27 @@
     object-position: center;
 }
 
+.form-holder{
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+}
+
+.form-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .form-group input{
     max-width: 380px;
     min-width: 240px;
     width: 100%;
+}
+
+.form-group{
+    margin-bottom: 10px;
 }
 
 .divider:after,
