--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4051,8 +4051,8 @@ textarea.form-control-lg {
   font-size: 1.5rem;
   text-decoration: none;
   white-space: nowrap;
-  font-weight: bolder;
-  letter-spacing: 0.2rem;
+  font-weight: bold;
+  letter-spacing: 1px;
 }
 .navbar-nav {
   display: flex;
@@ -4442,10 +4442,10 @@ textarea.form-control-lg {
   color: rgba(0, 0, 0, 0.9);
 }
 .navbar-light .navbar-nav .nav-link {
-  color: rgba(0, 0, 0, 0.7);
+  color: rgba(0, 0, 0, 0.55);
 }
 .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
-  color: rgba(0, 0, 0, 0.9);
+  color: rgba(0, 0, 0, 0.7);
 }
 .navbar-light .navbar-nav .nav-link.disabled {
   color: rgba(0, 0, 0, 0.3);
