--- a/public/css/frontend-css/profile.css
+++ b/public/css/frontend-css/profile.css
@@ -1,23 +1,32 @@
-.holder{
+.main-container{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    min-width: 320px;
     width: 100%;
-    margin-top: 20px;
 }
 
 .user-info{
-    min-width: 320px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 5px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    min-width: 320px;
+    padding: 24px;
+    margin-top: 20px;
+    width: 100%;
+    max-width: 400px;
+    background-color: #ffffff;
 }
 
 .image-container{
-    max-width: 320px;
-    height: 320px;
+    min-width: 200px;
+    max-width: 200px;
+}
+
+.image-container img{
+    width: 100%;
+    object-fit: cover;
 }
 
 .text-container{
@@ -27,11 +36,18 @@
     font-weight: bold;
 }
 
-.text-container .edit-btn span{
-    background-color: aliceblue;
+.user-details{
+    text-align: center;
+}
+
+.edit-btn{
+    text-align: center;
+}
+
+.text-container .edit-btn a{
     border-radius: 5px;
     padding: 5px;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
 }
 
 .ad-container{
@@ -40,8 +56,7 @@
     align-items: center;
     min-width: 320px;
     margin-top: 20px;
-    padding: 15px;
-    background-color: #F3F4F4;
+    padding: 24px;
 }
 
 .ad{
@@ -51,7 +66,6 @@
     width: 100%;
     margin-top: 10px;
     background-color: #ffffff;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .ad-topic{
@@ -59,7 +73,12 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    padding: 1.2rem;
+}
+
+.ad-topic h3{
+    font-size: 3rem;
+    font-weight: bold;
+    letter-spacing: 2px;
 }
 
 .ad-image{
@@ -72,26 +91,6 @@
 }
 
 @media only screen and (min-width: 769px){
-    .holder{
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-    }
-
-    .user-info{
-        flex-direction: row;
-        max-width: 1022px;
-        min-width: 768px;
-        width: 100%;
-        border-radius: 15px;
-    }
-
-    .text-container{
-        flex-direction: row;
-        justify-content: space-around;
-        width: 100%;
-    }
-
     .ad-container{
         max-width: 1022px;
         min-width: 768px;
@@ -110,6 +109,16 @@
     .ad-about{
         display: flex;
         flex-direction: column;
+    }
+
+}
+
+
+@media only screen and (min-width: 1100px){
+    .main-container{
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-around;
     }
 
 }
