--- a/public/css/frontend-css/show-room.css
+++ b/public/css/frontend-css/show-room.css
@@ -1,51 +1,137 @@
+body{
+  background-color: #ffffff;
+}
+
+.main-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.wrapper{
+  background: #FAFAFA;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 1300px !important;
+}
+
+.text-contents{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 300px;
+  padding: 15px;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
+
+.text-contents h4{
+  font-weight: bold;
+}
+
+.text-contents p{
+  font-weight: 500;
+}
+
+.room-heading{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.room-heading h2{
+  font-weight: bolder;
+  word-spacing: 1px;
+  letter-spacing: 0.5px;
+}
+
+.about-room{
+  margin-top: 20px;
+}
+
+.about-room h3{
+  font-weight: bold;
+}
+
+.carousel-wrapper{
+  max-width: 700px;  
+}
+
 .carousel {
     position: relative;
+}
+
+.carousel-item img {
+  object-fit: cover;
+}
+
+#carousel-thumbs {
+  background: rgba(255,255,255,.3);
+  bottom: 0;
+  left: 0;
+  padding: 0 50px;
+  right: 0;
+}
+
+#carousel-thumbs img {
+  border: 5px solid transparent;
+  cursor: pointer;
+}
+
+#carousel-thumbs img:hover {
+  border-color: rgba(255,255,255,.3);
+}
+
+#carousel-thumbs .selected img {
+  border-color: #fff;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+  width: 50px;
+}
+
+@media all and (max-width: 767px) {
+  .carousel-container #carousel-thumbs img {
+    border-width: 3px;
+  }
+}
+
+@media all and (min-width: 576px) {
+  .carousel-container #carousel-thumbs {
+    position: absolute;
+  }
+}
+
+@media all and (max-width: 576px) {
+  .carousel-container #carousel-thumbs {
+    background: #ccccce;
+  }
+}
+
+@media all and (max-width: 1000px) {
+  .text-contents{
+    max-width: 700px;
+    min-width: 300px;
+    width: 100%;
+    align-items: flex-start;
+  }
+}
+
+@media (min-width: 1000px) {
+  .wrapper{
+    flex-direction: row;
+    justify-content: space-around;
   }
 
-  .carousel-item img {
-    object-fit: cover;
+  .text-contents{
+    align-items: flex-start;
   }
 
-  #carousel-thumbs {
-    background: rgba(255,255,255,.3);
-    bottom: 0;
-    left: 0;
-    padding: 0 50px;
-    right: 0;
+  .room-heading{
+    align-items: flex-start;
   }
 
-  #carousel-thumbs img {
-    border: 5px solid transparent;
-    cursor: pointer;
-  }
-
-  #carousel-thumbs img:hover {
-    border-color: rgba(255,255,255,.3);
-  }
-
-  #carousel-thumbs .selected img {
-    border-color: #fff;
-  }
-
-  .carousel-control-prev,
-  .carousel-control-next {
-    width: 50px;
-  }
-
-  @media all and (max-width: 767px) {
-    .carousel-container #carousel-thumbs img {
-      border-width: 3px;
-    }
-  }
-
-  @media all and (min-width: 576px) {
-    .carousel-container #carousel-thumbs {
-      position: absolute;
-    }
-  }
-  
-  @media all and (max-width: 576px) {
-    .carousel-container #carousel-thumbs {
-      background: #ccccce;
-    }
-  }
+}
