--- a/public/css/frontend-css/show-room.css
+++ b/public/css/frontend-css/show-room.css
@@ -32,6 +32,7 @@ body{
 
 .text-contents p{
   font-weight: 500;
+  font-size: 1rem;
 }
 
 .room-heading{
@@ -47,12 +48,56 @@ body{
   letter-spacing: 0.5px;
 }
 
+.room-heading p{
+  font-size: 1rem;
+}
+
 .about-room{
   margin-top: 20px;
 }
 
 .about-room h3{
   font-weight: bold;
+}
+
+.about-room p{
+  font-size: 1rem;
+  text-align: justify;
+}
+
+.ratings-reviews-list{
+  display: flex;
+  flex-direction: column;
+}
+
+.single-review{
+  padding: 10px;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+  margin-bottom: 20px;
+}
+
+.review{
+  font-size: 1rem;
+  text-align: justify;
+}
+
+.user-info{
+  font-size: 1rem;
+}
+
+.write-review{
+  margin-bottom: 20px;
+}
+
+.write-review a{
+  font-size: 1rem;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-decoration: none;
+}
+
+.write-review a:hover{
+  cursor: pointer !important;
 }
 
 .carousel-wrapper{
@@ -92,6 +137,57 @@ body{
 .carousel-control-next {
   width: 50px;
 }
+
+.rate {
+  float: left;
+  height: 46px;
+  padding: 0 10px;
+  }
+
+  .rate:not(:checked) > input {
+  position:absolute;
+  display: none;
+  }
+
+  .rate:not(:checked) > label {
+  float:right;
+  width:1em;
+  overflow:hidden;
+  white-space:nowrap;
+  cursor:pointer;
+  font-size:30px;
+  color:#ccc;
+  }
+
+  .rate:not(:checked) > label:before {
+  content: '★ ';
+  }
+
+  .rate > input:checked ~ label {
+  color: #ffc700;
+  }
+
+  .rate:not(:checked) > label:hover,
+  .rate:not(:checked) > label:hover ~ label {
+  color: #deb217;
+  }
+
+  .rate > input:checked + label:hover,
+  .rate > input:checked + label:hover ~ label,
+  .rate > input:checked ~ label:hover,
+  .rate > input:checked ~ label:hover ~ label,
+  .rate > label:hover ~ input:checked ~ label {
+  color: #c59b08;
+  }
+
+  /* .rating-container .form-control:hover, .rating-container .form-control:focus{
+  background: #fff;
+  border: 1px solid #ced4da;
+  }
+
+  .rating-container textarea:focus, .rating-container input:focus {
+  color: #000;
+  } */
 
 @media all and (max-width: 767px) {
   .carousel-container #carousel-thumbs img {
