--- a/public/css/frontend-css/rooms.css
+++ b/public/css/frontend-css/rooms.css
@@ -89,6 +89,18 @@
     text-decoration: none;
 }
 
+.filter-button button{
+    padding: 5px;
+    background-color: #000000;
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.filter-button button:hover{
+    background-color: #ffffff;
+    color: #000000;
+}
+
 .room-btns a:hover{
     background-color: #ffffff;
     color: #000000;
@@ -97,6 +109,7 @@
 .rate-text{
     font-size: 1rem;
     font-weight: 500;
+    text-align: justify;
 }
 
 
