--- a/public/css/frontend-css/show-room.css
+++ b/public/css/frontend-css/show-room.css
@@ -23,6 +23,7 @@ body{
   align-items: center;
   min-width: 300px;
   padding: 15px;
+  margin-bottom: 15px;
   box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
 
