--- a/public/css/frontend-css/room.css
+++ b/public/css/frontend-css/room.css
@@ -127,8 +127,10 @@ h4.card-title {
 }
 
 .media-body {
-    min-width: 0;
-    display: flex;
+    min-width: 320px;
+    width: 100%;
+    display: flex !important;
+    flex-direction: column;
 }
 
 .media-chat .media-body p {
