--- a/public/css/frontend-css/profile.css
+++ b/public/css/frontend-css/profile.css
@@ -121,6 +121,21 @@
     font-size: 1rem;
 }
 
+.title-holder{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.btns{
+    display: flex;
+}
+
+
+.title-holder .btns a{
+    text-decoration: none;
+}
+
 
 @media only screen and (min-width: 769px){
     .ad-container{
@@ -154,5 +169,10 @@
     
     .user-info{
         margin-top: 120px;
+    }
+
+    .title-holder{
+        flex-direction: row;
+        justify-content: space-between;
     }
 }
