home layout update

--- a/public/css/frontend-css/home.css
+++ b/public/css/frontend-css/home.css
@@ -92,6 +92,8 @@
 
 .card-img-top{
     border-radius: 0px !important;
+    object-fit: cover;
+    height: 200px;
 }
 
 .popular-rooms-heading div{
