--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4048,9 +4048,11 @@ textarea.form-control-lg {
   padding-top: 0.32rem;
   padding-bottom: 0.32rem;
   margin-right: 1rem;
-  font-size: 1.125rem;
+  font-size: 1.45rem;
   text-decoration: none;
   white-space: nowrap;
+  font-weight: bolder;
+  letter-spacing: 1px;
 }
 .navbar-nav {
   display: flex;
